<resources>
    <string name="app_name">Deep Knowledge</string>

    // create account
    <string name="create_account">Create Account</string>
    <string name="otp_info">we will send you an OTP on your email id</string>
    <string name="full_name"><font size="16"><b>FULL NAME</b></font></string>
    <string name="email"><font size="16"><b>EMAIL</b></font></string>
    <string name="password"><font size="16"><b>PASSWORD</b></font></string>
    <string name="get_otp">GET OTP</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="terms_condition_info">By Creating an account, you agree to our Conditions of use and privacy notice</string>


    //OTP Verification
    <string name="otp_verification">OTP Verification</string>
    <string name="six_digit_email_id">We have sent you a 6 digit code on your email id</string>
    <string name="otp_expire">The OTP will be expire in</string>
    <string name="minutes">Minutes</string>
    <string name="Didnot_receive_otp">Didn\'t receive the code?</string>
    <string name="resend_OTP">Resend OTP</string>
    <string name="verify">VERIFY</string>


    // Sign In
    <string name="enter_credentials">Enter your credentials to login</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account_now">Create Account Now</string>
    <string name="invalid_data">Invalid Data</string>


    // Main screen
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="download">Downloads</string>
    <string name="settings">Settings</string>
    <string name="courses">Courses</string>
    <string name="books">Books</string>
    <string name="events">Events</string>

</resources>
